# farm_guard

./: README.md  technical-decisions.md
map/: clean_map.pgm  clean_map.yaml
src/amr/: package.xml  setup.py
src/amr/amr/: designator.py  robot_controller.py
src/webcam/: package.xml  setup.py
src/webcam/webcam/: calibrate_homography.py  ground_homography.npy  tower_world_detector.py
ui/: .env.example  .gitignore  README.md
ui/backend/: main.py  requirements.txt
ui/backend/ros_bridge/: README.md
ui/docs/: database-erd.md  system-architecture-rationale.md  system-architecture.drawio
ui/frontend/: index.html  package-lock.json  package.json
ui/frontend/src/: App.jsx
ui/frontend/src/api/: client.js  statusApi.js
ui/frontend/src/components/camera/: CameraPanel.jsx
ui/frontend/src/components/common/: StatusBadge.jsx
ui/frontend/src/components/dashboard/: AmrStatusCard.jsx  WebcamStatusCard.jsx
ui/frontend/src/components/layout/: Layout.jsx  Sidebar.jsx
ui/frontend/src/components/report/: ReportOperationSummary.jsx  ReportTimeline.jsx
ui/frontend/src/config/: cameras.js  env.js
ui/frontend/src/hooks/: usePolling.js
ui/frontend/src/pages/: CameraMonitorPage.jsx  IntegratedReportPage.jsx  LoginPage.jsx  MunicipalDashboardPage.jsx  ReportAnalyticsPage.jsx  SavedReportsPage.jsx
ui/frontend/src/styles/: global.css
ui/frontend/src/utils/: auth.js  formatDate.js  reportAnalysis.js  status.js
